# vscode_ansible

./: .gitignore  LICENSE  README.md  ansible-collection-requirements.yml  ansible.cfg  pyproject.toml  vscode_ansible.code-workspace
module_args/: hello_world.json
