[tool.poetry]
name = "vscode_ansible"
version = "0.1.0"
description = "VSCode Ansible python dependencies"
authors = ["Todor Tsankov <tushe@visdigita.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "2.15.12"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
black = "^24.8.0"
ansible-lint = { version = "^24.9.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
